GET API for fetching all the case file of given case
