# app/models/case_document.rb
@@ -7,4 +7,8 @@ class CaseDocument < ApplicationRecord
 
   enum :document_status, { pending: 0, verified: 1, denied: 2 }
   validates :document_status, presence: true
+
+  def document_url
+    document.attached? ? Rails.application.routes.url_helpers.url_for(document) : nil
+  end
 end
